# Code_library-

./: .gitignore  README.md
1_python_library/: README.md  requirements-hft.txt
1_python_library/asyncio_uvloop/: README.md
1_python_library/fundamentals/: 01_types_and_variables.py  02_control_flow.py  03_functions_and_modules.py  04_data_structures.py  05_classes_and_oop.py  06_exceptions_and_context.py  07_file_io_and_json.py  08_numpy_intro.py  README.md
1_python_library/numba_cython/: README.md
1_python_library/numpy_scipy/: README.md
1_python_library/orjson_serialization/: README.md
1_python_library/pandas_polars/: README.md
1_python_library/pytest_benchmark/: README.md
1_python_library/pyzmq_redis/: README.md
1_python_library/sortedcontainers/: README.md
1_python_library/websockets_feeds/: README.md
2_cpp_library/: README.md  dependencies-hft.md
2_cpp_library/benchmark_testing/: README.md
2_cpp_library/boost_asio/: README.md
2_cpp_library/eigen/: README.md
2_cpp_library/fundamentals/: 01_types_io.cpp  02_pointers_references.cpp  03_stl_containers.cpp  04_classes_raii.cpp  05_templates.cpp  06_smart_pointers.cpp  CMakeLists.txt  README.md
2_cpp_library/lockfree_queues/: README.md
2_cpp_library/quickfix/: README.md
2_cpp_library/spdlog_fmt/: README.md
2_cpp_library/tbb_parallel/: README.md
2_cpp_library/zeromq/: README.md
3_rust_library/: Cargo-hft-deps.md  README.md
3_rust_library/crossbeam/: README.md
3_rust_library/fundamentals/: Cargo.toml  README.md
3_rust_library/ndarray/: README.md
3_rust_library/redis/: README.md
(+13 files in other folders)
